# birdepy_project

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  package-lock.json  package.json  release_notes_draft.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: release.yml  test.yml
src/: prob_da.tex  prob_erlang.tex  prob_expm.tex  prob_gwa.tex  prob_gwasa.tex  prob_ilt.tex  prob_oua.tex  prob_uniform.tex  test.py
src/birdepy/: __init__.py  aug_expm.py  aug_ilt.py  aug_num.py  em_Lange.py  em_cg.py  em_none.py  em_qn1.py  em_qn2.py  gpu_functions.py  interface_abc.py  interface_aug.py  interface_dnm.py  interface_em.py  interface_estimate.py  interface_forecast.py  interface_lse.py  interface_probability.py  probability_Erlang.py  probability_da.py  probability_expm.py  probability_gwa.py  probability_gwasa.py  probability_ilt.py  probability_oua.py  probability_sim.py  probability_uniform.py  simulate.py  squares_expm.py  squares_fm.py  squares_gwa.py  utility.py  utility_em.py  utility_probability.py
src/birdepy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: estimate_test.py  probability_test.py  simulate_continuous_test.py  simulate_discrete_test.py  utility_test.py
