[metadata]
name = birdepy
version = 0.0.2
author = Sophie Hautphenne and Brendan Patch
author_email = birdepy@gmail.com
description = Parameter estimation for birth-and-death processes
long_description = file: README.md
long_description_content_type = text/markdown
url =  https://birdepy.github.io
project_urls =
    Bug Tracker = https://github.com/birdepy/birdepy_project/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src